<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootPopupView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/how_mood"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/popupMoodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/not_bad_mood"
            android:textColor="#F3B600"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="36dp"
                android:text="@string/awesome_mood"
                android:textColor="#979393" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_style"
                android:splitTrack="false"
                android:thumb="@drawable/rater_thumb"
                android:thumbOffset="12dp" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/floatingMoodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F3B600"
        android:visibility="gone" />

    <TextView
        android:id="@+id/setMoodButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_shape"
        android:drawablePadding="5dp" />
</FrameLayout>