<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        app:chipSpacingHorizontal="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Сон"
            app:chipSurfaceColor="#2196F3" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="тренировки"
            app:chipSurfaceColor="#673AB7" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Сон"
            app:chipSurfaceColor="#FF5722" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="тренировки"
            app:chipSurfaceColor="#9C27B0" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Сон"
            app:chipSurfaceColor="#4CAF50" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Сон"
            app:chipSurfaceColor="#FFEB3B" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="сон"
            app:chipSurfaceColor="#9C27B0" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Сон"
            app:chipSurfaceColor="#4CAF50" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="тренировки"
            app:chipSurfaceColor="#FFEB3B" />
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/howMoodLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/how_mood"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="36dp"
                android:text="@string/awesome_mood"
                android:textColor="#979393" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/not_bad_mood"
                android:textColor="#979393" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="36dp"
                android:text="@string/bad_mood"
                android:textColor="#979393" />

            <View
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rater_shape" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/moodLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/mood"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mainMoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/not_bad_mood"
                android:textColor="#F3B600"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/moodSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:progress="50"
                android:progressDrawable="@drawable/small_style"
                android:splitTrack="false"
                android:thumb="@drawable/small_thumb"
                android:thumbOffset="12dp" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:id="@+id/chooser"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center" />
</FrameLayout>